@@ -1,0 +1,29 @@
+/*
+ * pty_init: Initialize internal state of pty.
+ * Currently initializes error tables.
+ * Copyright 1990 by the Massachusetts Institute of Technology.
+ *
+ * 
+ *Permission to use, copy, modify, and
+ * distribute this software and its documentation for any purpose and
+ * without fee is hereby granted, provided that the above copyright
+ * notice appear in all copies and that both that copyright notice and
+ * this permission notice appear in supporting documentation, and that
+ * the name of M.I.T. not be used in advertising or publicity pertaining
+ * to distribution of the software without specific, written prior
+ * permission.  M.I.T. makes no representations about the suitability of
+ * this software for any purpose.  It is provided "as is" without express
+ * or implied warranty.
+ * 
+ */
+
+#include "mit-copyright.h"
+#include <com_err.h>
+#include "libpty.h"
+#include "pty-int.h"
+
+long pty_init()
+{
+    initialize_pty_error_table();
+    return 0;
+}
